=head1 OmniPITR

=head2 2010-09-28

=over

=item * Fix error with handling master backups where given data-dir contained
trailing / character

=back


=head2 2010-09-10

=over

=item * Fix error handling for pg_controldata

=back

=head2 2010-09-08

=over

=item * Add option to handle various ways of dealing with problems with calls to
pg_controldata (--error-pgcontroldata) to omnipitr-restore

=back

=head2 2010-09-07

=over

=item * Log whole response from pg_controldata in case there are problems with it

=back

=head2 2010-07-28

=over

=item * Add forgotten --nice-path to omnipitr-archive

=item * Add option not to use nice for omnipitr-archive, and both
omnipitr-backup-* programs

=back

=head2 2010-07-15

=over

=item * Added "IMPORTANT NOTICES" part to documents for omnipitr programs with
additional info that might not be obvious always.

=item * Added information about reuiring at least gnu tar 1.20 (earlier version
didn't have --transform option which is required by omnipitr-backup-slave)

=back

=head2 2010-06-30

=over

=item * Refactoring done.

=item * omnipitr-backup-slave in beta

=back

=head2 2010-06-29

=over

=item * First part of refactoring the code

=back

=head2 2010-06-28

=over

=item * Fix type in changelog (28 -> 23)

=item * Fix call to tar with 2 --transform options. Some tar versions don't
handle it well, and it's required for omnipitr-backup-slave

=item * Exclude whole pg_log and pg_xlog directories if these are symlinks - no
point in restoring them on slave system, and it's pretty common to be symlinked.

=back

=head2 2010-06-23

=over

=item * Fix description of -x option for omnipitr-backup-master

=item * Add information that one should remove finish recovery trigger after
successfull finish of wal replication.

=item * alpha version of omnipitr-backup-slave

=back

=head2 2010-06-12

=over

=item * Fix ommission in workaround for PostgreSQL 8.2 and 8.3 - regarding order
of xlog segments.

=back

=head2 2010-06-10

=over
